# fedlex-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.de.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  server.py  test_scenarios.py
.github/workflows/: publish.yml
src/fedlex_mcp/: server.py
tests/: test_server.py
