[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedlex-mcp"
version = "0.1.0"
description = "MCP server for Swiss federal law via the Fedlex SPARQL endpoint"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "fedlex", "swiss-law", "sparql", "claude", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp[cli]>=1.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.4.0",
]

[project.scripts]
fedlex-mcp = "fedlex_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/fedlex-mcp"
Repository = "https://github.com/malkreide/fedlex-mcp"
Issues = "https://github.com/malkreide/fedlex-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fedlex_mcp"]

[tool.pytest.ini_options]
markers = ["live: Tests die echte API-Aufrufe machen (deselect mit -m 'not live')"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
